Trying to prevent flicker appearing.

--- a/css/_ui.less
+++ b/css/_ui.less
@@ -34,6 +34,8 @@ select, button { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit
   -webkit-transform: rotateY(0deg) translateZ(0px) translateX(0%) scale(1);
   .box-sizing;
   left:-100%;
+  -webkit-perspective:1000px;
+  -webkit-backface-visibility: hidden;
 
     .content {
 
